deploy/k8s/cowrie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cowrie
  namespace: openthreatgrid
  labels:
    app: cowrie
spec:
  selector:
    app: cowrie
  ports:
    - port: 2222
      targetPort: 2222
      name: ssh
    - port: 2223
      targetPort: 2223
      name: telnet
